the api is being in progress

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <nav>
         <a class="gifos-image" href="/"
-          ><img src="./asset/gifOF_logo.png" alt="Logo GifOS"
+          ><img src="./asset/gifOF_logo.png" alt="Logo GifOS" id="logo"
         /></a>
         <ul class="menu">
           <li class="create-gifos"><a href="#">Crear Guifos</a></li>
@@ -83,6 +83,9 @@
     <section id="trends">
       <h2>Tendencias:</h2>
     </section>
+    <div class="hola1">
+      <img src="" alt="" class="hola2" id="nuevaprueba" />
+    </div>
     <script src="./js/functions.js"></script>
     <script src="./js/theme_logic.js"></script>
   </body>
