This commit has all the changes until the search bar is operative it is only missing the api requests GET

--- a/index.html
+++ b/index.html
@@ -54,12 +54,24 @@
           <input
             type="text"
             placeholder="Busca gifs, hashtags, temas, busca lo que quieras…"
+            id ="input-search"
           />
           <button>
             <img src="./asset/lupa_inactive.svg" alt="" />
             <p>Buscar</p>
           </button>
         </form>
+      </div>
+      <div class ='search-suggest-text'>  
+        <div class='first-search' >
+          <p id="first-search-p-tag">hola</p>
+        </div>
+        <div class ='second-search' >
+        <p id="second-search-p-tag">hola</p>
+        </div>
+        <div class='third-search' >
+          <p id="third-search-p-tag">hola</p>
+        </div>
       </div>
     </section>
     <section 
