This commit has all the api called working it is able to render all the searches as well as changing the styles. It has been some js files deleted in order to order its functionality

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./styles/light/styles.css" id="styles-tag"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap"
       rel="stylesheet"
@@ -50,7 +50,7 @@
         <p>Buscar</p>
       </div>
       <div class="form-box" id="form-box">
-        <form action="">
+        <form>
           <input
             type="text"
             placeholder="Busca gifs, hashtags, temas, busca lo que quieras…"
@@ -116,11 +116,9 @@
         <img src="" alt="" id="trend-gif-image-11">
         <img src="" alt="" id="trend-gif-image-12">
       </div>
-
     </section>
     <script src = "./js/variables.js"></script>
     <script src="./js/functions.js"></script>
     <script src="./js/listeners.js"></script>
-    <script src="js/api.js"></script>
   </body>
 </html>
