New addition since a long time ago I preferred to work in only one commit, bad practice I know, however, it worked for me. It doesn't mean I will keep doing this. I should create branches and commit on save changes. This version is able to control the camera, record the gif and uploaded to the giphy DB

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           ><img src="./asset/gifOF_logo.png" alt="Logo GifOS" id="logo"
         /></a>
         <ul class="menu">
-          <li class="create-gifos" id="create-gifos-box"><a href="#" id ="create-gifos-text">Crear Guifos</a></li>
+          <li class="create-gifos" id="create-gifos-box"><a href="./capturing_video/capturing_video.html" id ="create-gifos-text">Crear Guifos</a></li>
           <li class="choose-theme" id="choose-theme-box"><a href="#" id ="choose-theme-text">Elegir tema</a></li>
           <li class="down-arrow" id="down-arrow">
             <img
