The project is ready to rock! - The html has some deletions in order to be able to create its childs in a dynamic way - The scss and css files now has the logic to be able to create those childs and rendering correctly, on the other hand, the logic for the first trend view was changed - The logic.js file now has the logic to be able to render the gifs created and stored in the local storage

--- a/capturing_video/capturing_video.html
+++ b/capturing_video/capturing_video.html
@@ -256,21 +256,9 @@
     </section> -->
     <section id="trend" class="trend">
       <div class ="trend-box" id="trend-box"</div>
-        <h2>Tendencias:</h2>
+        <h2>Mis Guifos:</h2>
       </div>
       <div class="trend-gifs" id ="trends-gifs">
-        <img src="" alt="" id="trend-gif-image-1">
-        <img src="" alt="" id="trend-gif-image-2">
-        <img src="" alt="" id="trend-gif-image-3">
-        <img src="" alt="" id="trend-gif-image-4">
-        <img src="" alt="" id="trend-gif-image-5">
-        <img src="" alt="" id="trend-gif-image-6">
-        <img src="" alt="" id="trend-gif-image-7">
-        <img src="" alt="" id="trend-gif-image-8">
-        <img src="" alt="" id="trend-gif-image-9">
-        <img src="" alt="" id="trend-gif-image-10">
-        <img src="" alt="" id="trend-gif-image-11">
-        <img src="" alt="" id="trend-gif-image-12">
       </div>
     </section>
     <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
