A New step forward the compleation of the project -in logic.js I just re-arranged some variables - I deleted the 3 js files in order to have only one - I worked on the search button coloring and status

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
       </div>
       <div class ='search-suggest-text' id ="search-suggest-text">  
         <div class='first-search' id="first-search-div">
-          <p id="first-search-p-tag">hola</p>
+          <p id="first-search-p-tag"></p>
         </div>
         <div class ='second-search' id ="second-search-div">
-        <p id="second-search-p-tag">hola</p>
+        <p id="second-search-p-tag"></p>
         </div>
         <div class='third-search' id="third-search-div">
-          <p id="third-search-p-tag">hola</p>
+          <p id="third-search-p-tag"></p>
         </div>
       </div>
     </section>
@@ -81,19 +81,19 @@
       </div>
       <div id="suggest-container" class = 'suggest-container'>
         <div class="suggest-container-gifbox">
-            <p>#Charlie&Snoopy<img src="./asset/button3.svg" alt="" class="close-button-1"></p>        
+          <p><img src="./asset/button3.svg" alt="" class="close-button-1"></p>        
           <div class="suggest-gifbox-img"><img id="suggest-gif-1" src="" alt="" /><a href="">Ver más...</a></div>
         </div>
         <div class="suggest-container-gifbox">
-          <p>#Gansta<img src="./asset/button3.svg" alt="" class="close-button-2"></p>
+          <p><img src="./asset/button3.svg" alt="" class="close-button-2"></p>
           <div class="suggest-gifbox-img"><img id="suggest-gif-2" src="" alt="" /><a href="">Ver más...</a></div>
         </div>
         <div class="suggest-container-gifbox">
-          <p>#CharlieUpSet<img src="./asset/button3.svg" alt="" class="close-button-3"></p>
+          <p><img src="./asset/button3.svg" alt="" class="close-button-3"></p>
           <div class="suggest-gifbox-img"><img id="suggest-gif-3" src="" alt="" /><a href="">Ver más...</a></div>
         </div>
         <div class="suggest-container-gifbox">
-          <p>#CharlieChristmas<img src="./asset/button3.svg" alt="" class='close-button-4'></p>
+          <p><img src="./asset/button3.svg" alt="" class='close-button-4'></p>
           <div class="suggest-gifbox-img"><img id="suggest-gif-4" src="" alt="" /><a href="">Ver más...</a></div>
         </div>
       </div>
@@ -117,8 +117,6 @@
         <img src="" alt="" id="trend-gif-image-12">
       </div>
     </section>
-    <script src = "./js/variables.js"></script>
-    <script src="./js/functions.js"></script>
-    <script src="./js/listeners.js"></script>
+    <script src = "./js/main.js"></script>
   </body>
 </html>
