This commit is the final commit for the main index.html It is able to build dynamically the trend gif section, it is also able to pull up the local storage.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <h2>Tendencias:</h2>
       </div>
       <div class="trend-gifs" id ="trends-gifs">
-        <img src="" alt="" id="trend-gif-image-1">
+        <!-- <img src="" alt="" id="trend-gif-image-1">
         <img src="" alt="" id="trend-gif-image-2">
         <img src="" alt="" id="trend-gif-image-3">
         <img src="" alt="" id="trend-gif-image-4">
@@ -114,7 +114,7 @@
         <img src="" alt="" id="trend-gif-image-9">
         <img src="" alt="" id="trend-gif-image-10">
         <img src="" alt="" id="trend-gif-image-11">
-        <img src="" alt="" id="trend-gif-image-12">
+        <img src="" alt="" id="trend-gif-image-12"> -->
       </div>
     </section>
     <script src = "./js/main.js"></script>
