--- a/capturing_video/capturing_video.html
+++ b/capturing_video/capturing_video.html
@@ -262,7 +262,7 @@
       </div>
     </section>
     <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
-    <script src = "./logic.js"></script>
+    <script src = "../js/logic.js"></script>
 
   </body>
 </html>
