--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             placeholder="Busca gifs, hashtags, temas, busca lo que quieras…"
             id ="input-search"
           />
-          <button class ="search-button" id = "search-button">
+          <div class ="search-button" id = "search-button">
             <img src="./asset/lupa_inactive.svg" alt="" />
             <p>Buscar</p>
-          </button>
+          </div>
         </form>
       </div>
       <div class ='search-suggest-text' id ="search-suggest-text">  
@@ -82,39 +82,27 @@
       <div id="suggest-container" class = 'suggest-container'>
         <div class="suggest-container-gifbox">
           <p><img src="./asset/button3.svg" alt="" class="close-button-1"></p>        
-          <div class="suggest-gifbox-img"><img id="suggest-gif-1" src="" alt="" /><a href="">Ver más...</a></div>
+          <div class="suggest-gifbox-img"><img src = "./asset/Blank.png" id="suggest-gif-1" alt="" /><a href="">Ver más...</a></div>
         </div>
         <div class="suggest-container-gifbox">
           <p><img src="./asset/button3.svg" alt="" class="close-button-2"></p>
-          <div class="suggest-gifbox-img"><img id="suggest-gif-2" src="" alt="" /><a href="">Ver más...</a></div>
+          <div class="suggest-gifbox-img"><img id="suggest-gif-2" src = "./asset/Blank.png" alt="" /><a href="">Ver más...</a></div>
         </div>
         <div class="suggest-container-gifbox">
           <p><img src="./asset/button3.svg" alt="" class="close-button-3"></p>
-          <div class="suggest-gifbox-img"><img id="suggest-gif-3" src="" alt="" /><a href="">Ver más...</a></div>
+          <div class="suggest-gifbox-img"><img id="suggest-gif-3" src = "./asset/Blank.png" alt="" /><a href="">Ver más...</a></div>
         </div>
         <div class="suggest-container-gifbox">
           <p><img src="./asset/button3.svg" alt="" class='close-button-4'></p>
-          <div class="suggest-gifbox-img"><img id="suggest-gif-4" src="" alt="" /><a href="">Ver más...</a></div>
+          <div class="suggest-gifbox-img"><img id="suggest-gif-4" src = "./asset/Blank.png" alt="" /><a href="">Ver más...</a></div>
         </div>
       </div>
     </section>
     <section id="trend" class="trend">
-      <div class ="trend-box" id="trend-box"</div>
+      <div class ="trend-box" id="trend-box">
         <h2>Tendencias:</h2>
       </div>
       <div class="trend-gifs" id ="trends-gifs">
-        <!-- <img src="" alt="" id="trend-gif-image-1">
-        <img src="" alt="" id="trend-gif-image-2">
-        <img src="" alt="" id="trend-gif-image-3">
-        <img src="" alt="" id="trend-gif-image-4">
-        <img src="" alt="" id="trend-gif-image-5">
-        <img src="" alt="" id="trend-gif-image-6">
-        <img src="" alt="" id="trend-gif-image-7">
-        <img src="" alt="" id="trend-gif-image-8">
-        <img src="" alt="" id="trend-gif-image-9">
-        <img src="" alt="" id="trend-gif-image-10">
-        <img src="" alt="" id="trend-gif-image-11">
-        <img src="" alt="" id="trend-gif-image-12"> -->
       </div>
     </section>
     <script src = "./js/main.js"></script>
