Last commmit for working

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       </nav>
     </header>
     <section class="search-box">
+      <h2 class='auxiliar-class-hidden'>search-section</h2>
       <div class="search-container">
         <p>Buscar</p>
       </div>
@@ -73,6 +74,11 @@
           <p id="third-search-p-tag"></p>
         </div>
       </div>
+    </section>
+    <section class='history-section' >
+      <h2 class='auxiliar-class-hidden'>history-section</h2>
+        <div id='history-div-container' class='history-div-container'>
+        </div>
     </section>
     <section 
     class = "suggest" id ="suggest-section">
